samples/_failures_safe/1760961627_928c9d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fa273cd3.c: In function ‘main’:
./samples/SAFE/__tmp_fa273cd3.c:136:42: error: expected ‘)’ at end of input
  136 |         int level = parse_log_level(input
      |                                    ~     ^
      |                                          )
./samples/SAFE/__tmp_fa273cd3.c:136:9: error: expected declaration or statement at end of input
  136 |         int level = parse_log_level(input
      |         ^~~
./samples/SAFE/__tmp_fa273cd3.c:136:9: error: expected declaration or statement at end of input
